# CSML

./: .gitignore  README.md  check_scival_fields.py  check_scival_mapping.py  config.yml  csml.py  from_tmp.sql  postprocess.sql  pure.py  pyproject.toml  requirements.txt  scival.py  scival.yml  страны_config.json
.github/workflows/: docs.yml
commands/: __init__.py  check_scival_fields.py  config_schema.py
docs/: conf.py  index.rst  usage.rst
docs/_extensions/: sphinx_typer_argument_help.py
docs/reference/: config.rst
docs/usage/: cli.rst  config.rst
examples/: elibrary.yml  scival.yml  wos.yml
lib/: __init__.py  checks.py  cli.py  console.py  index.py  utils.py  wrappers.py
lib/console/: progress.py
lib/tasks/: __init__.py  add_columns_sql.py  base.py  create_table_sql.py  map_to_new_columns.py  map_to_new_table.py  row_factory.py  sequence.py
lib/templates/: __init__.py  adapter.py  convert.py  environment.py  extension.py  types.py
parsers/: internalorgs.py  internalpersons.py
parsers/pure/: __init__.py  externalorgs.py  internalorgs.py
parsers/scival/: __init__.py  csml_source.sql  incites_csv.py  map_type_category.sql  parse_records.py  record_ids.sql  record_metrics.sql  record_topics.sql
pipelines/: __init__.py  config.py  csv_utils.py  glob.py
pipelines/elibrary/: __main__.py  config.py  (+1 more)
schema/: csml_category_classification_code.sql  csml_record_category_metrics.sql  csml_record_metrics.sql  csml_record_topics.sql  csml_source.sql  pure_record.sql
tasks/: __init__.py  map_to_new_table.py
templates/: convert.py  environment.py
(+86 files in other folders)
