[project]
name = ""
version = ""
description = ""
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "polars>=0.19.3",
    "parsel>=1.8.1",
    "returns>=0.22.0",
    "sqlglot>=18.5.1",
    "jinja2>=3.1.2",
    "dataclasses-json>=0.6.1",
    "pyyaml>=6.0.1",
    "pydantic>=2.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
