[project]
name = ""
version = ""
description = ""
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "parsel>=1.8.1",
    "returns>=0.22.0",
    "sqlglot>=18.5.1",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "pydantic>=2.4.2",
    "rich>=13.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
