[project]
name = ""
version = ""
description = ""
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "parsel>=1.8.1",
    "returns>=0.22.0",
    "sqlglot>=18.5.1",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "pydantic>=2.4.2",
    "rich>=13.6.0",
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "sphinx>=7.2.6",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-jsonschema>=1.19.1",
    "sphinx-click>=5.1.0",
    "sphinx-immaterial>=0.11.9",
]
